tests/modules-corpus/corpus/accept/structure_three_fields.pdx
// Issue #241: elaborator — structure elaboration → typed value
// AC 1: three-field structure (type + val + nested module) elaborates cleanly.

structure {
  type t = int
  val x = 42
  module M = structure {
  }
}
